{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 49,
  "lineage": "a6efb4ad-3b1f-e7b6-d5a2-a57e24b9bbe5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00b105a12aa2a60eb",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-0a533f08db1036706",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a533f08db1036706",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "frankfurt-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07ea33f55de30be4b"
              }
            ],
            "primary_network_interface_id": "eni-07ea33f55de30be4b",
            "private_dns": "ip-10-0-10-189.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.189",
            "public_dns": "ec2-52-59-221-122.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.221.122",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bef26e9e7812334c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bad924c014fbc2a",
            "tags": {
              "Environment": "dev",
              "ManageByTerraform": "true",
              "Name": "Terraform Web Server-eu-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManageByTerraform": "true",
              "Name": "Terraform Web Server-eu-central-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd193ccaa903466f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-0a533f08db1036706",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH",
            "data.aws_ami.aws_linux_2023",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00b105a12aa2a60eb",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-0697b765b329bf573",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0697b765b329bf573",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "frankfurt-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f40eb310f83e54e9"
              }
            ],
            "primary_network_interface_id": "eni-0f40eb310f83e54e9",
            "private_dns": "ip-10-0-11-128.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.128",
            "public_dns": "ec2-3-73-85-183.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.73.85.183",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a1ea7b179191d5eb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04553202b5b38a6af",
            "tags": {
              "Environment": "dev",
              "ManageByTerraform": "true",
              "Name": "Terraform Web Server-eu-central-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManageByTerraform": "true",
              "Name": "Terraform Web Server-eu-central-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd193ccaa903466f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-0697b765b329bf573",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH",
            "data.aws_ami.aws_linux_2023",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group/sg-0cd193ccaa903466f",
            "description": "Allow SSH,HTTP, and HTTPS traffic to web servers",
            "egress": [],
            "id": "sg-0cd193ccaa903466f",
            "ingress": [],
            "name": "allow_web_SSH",
            "name_prefix": "",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_SSH"
            },
            "tags_all": {
              "Name": "allow_web_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sg-0cd193ccaa903466f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-08de1b0f9601ef0fc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08de1b0f9601ef0fc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0cd193ccaa903466f",
            "security_group_rule_id": "sgr-08de1b0f9601ef0fc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-08de1b0f9601ef0fc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-0b536cece2bb8e54d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b536cece2bb8e54d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0cd193ccaa903466f",
            "security_group_rule_id": "sgr-0b536cece2bb8e54d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-0b536cece2bb8e54d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-0c76b15abbfc4a6fa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c76b15abbfc4a6fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0cd193ccaa903466f",
            "security_group_rule_id": "sgr-0c76b15abbfc4a6fa",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-0c76b15abbfc4a6fa",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-0da3cd9b92240b069",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0da3cd9b92240b069",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0cd193ccaa903466f",
            "security_group_rule_id": "sgr-0da3cd9b92240b069",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-0da3cd9b92240b069",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:network-acl/acl-01ecd80d68b2e12ff",
            "default_network_acl_id": "acl-01ecd80d68b2e12ff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01ecd80d68b2e12ff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "subnet_ids": [
              "subnet-039e45c4fcb44a292",
              "subnet-056e704f2bf0bec7e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-default"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-default"
            },
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-060394a23c823d2b1",
            "default_route_table_id": "rtb-060394a23c823d2b1",
            "id": "rtb-060394a23c823d2b1",
            "owner_id": "419197236432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-default"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:internet-gateway/igw-0f7116af479ef009f",
            "id": "igw-0f7116af479ef009f",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf"
            },
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "igw-0f7116af479ef009f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f7116af479ef009f",
            "id": "r-rtb-00a1e4502fbf581c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-00a1e4502fbf581c4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-00a1e4502fbf581c4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-089e9dc4123e10567",
            "id": "rtb-089e9dc4123e10567",
            "owner_id": "419197236432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-private-eu-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-private-eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtb-089e9dc4123e10567",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-0d037bf8707e091cf",
            "id": "rtb-0d037bf8707e091cf",
            "owner_id": "419197236432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-private-eu-central-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-private-eu-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtb-0d037bf8707e091cf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-00a1e4502fbf581c4",
            "id": "rtb-00a1e4502fbf581c4",
            "owner_id": "419197236432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7116af479ef009f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtb-00a1e4502fbf581c4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c346e3f856b1aa99",
            "region": "eu-central-1",
            "route_table_id": "rtb-089e9dc4123e10567",
            "subnet_id": "subnet-039e45c4fcb44a292"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-0c346e3f856b1aa99",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0966ccbcf41615a44",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d037bf8707e091cf",
            "subnet_id": "subnet-056e704f2bf0bec7e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-0966ccbcf41615a44",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a174666d6df7ea91",
            "region": "eu-central-1",
            "route_table_id": "rtb-00a1e4502fbf581c4",
            "subnet_id": "subnet-09bad924c014fbc2a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-0a174666d6df7ea91",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d1270465854a5f7",
            "region": "eu-central-1",
            "route_table_id": "rtb-00a1e4502fbf581c4",
            "subnet_id": "subnet-04553202b5b38a6af"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-06d1270465854a5f7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-039e45c4fcb44a292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039e45c4fcb44a292",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-039e45c4fcb44a292",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-056e704f2bf0bec7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056e704f2bf0bec7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-056e704f2bf0bec7e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-09bad924c014fbc2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bad924c014fbc2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-09bad924c014fbc2a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-04553202b5b38a6af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04553202b5b38a6af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0bd78cede27b5e24d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-04553202b5b38a6af",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:vpc/vpc-0bd78cede27b5e24d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ecd80d68b2e12ff",
            "default_route_table_id": "rtb-060394a23c823d2b1",
            "default_security_group_id": "sg-06e22e3552250302d",
            "dhcp_options_id": "dopt-0497cab12d457f90a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd78cede27b5e24d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060394a23c823d2b1",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagagedByTerrafrom": "yes",
              "Name": "demo-vpc-tf"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "vpc-0bd78cede27b5e24d",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}